--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-datepicker": "^7.0.0",
+    "@types/react-select": "^5.0.1",
+    "autoprefixer": "^10.4.21",
+    "date-fns": "^4.1.0",
+    "next": "15.3.4",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-select": "^5.10.1",
+    "react-use-wizard": "^2.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5"
   }
 }
