final steps logic

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-select": "^5.10.1",
     "react-use-wizard": "^2.3.0"
   },
